# spotify-to-pocketcasts

./: .env.example  .gitignore  README.md  delete_spotify_subscriptions.py  pocketcasts.py  pyproject.toml  requirements.txt  spotify.py  spotify_to_pocketcasts.py
