[project]
name = "spotify-to-pocketcasts"
version = "0.1.0"
description = "This is a script to transfer Spotify podcast subscriptions and listening history to Pocket Casts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "spotipy>=2.22.0",
    "urllib3>=1.26.14",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
